@@ -10,7 +10,7 @@
 (*                                                                     *)
 (***********************************************************************)
 
-(* $Id: pa_op.ml,v 1.3 2006/12/26 08:54:09 deraugla Exp $ *)
+(* $Id: pa_op.ml,v 1.4 2006/12/31 16:30:10 deraugla Exp $ *)
 
 open Pcaml;
 
@@ -152,13 +152,11 @@ value rec stream_pattern loc epo e ekont =
       | _ -> e ]
   | [(spc, err) :: spcl] ->
       let skont =
-        let ekont err =
-          let str =
-            match err with
-            [ Some estr -> estr
-            | _ -> <:expr< "" >> ]
-          in
-          <:expr< raise (Stream.Error $str$) >>
+        let ekont =
+          fun
+          [ Some (Some estr) -> <:expr< raise (Stream.Error $estr$) >>
+          | Some None -> <:expr< raise Stream.Failure >>
+          | None -> <:expr< raise (Stream.Error "") >> ]
         in
         stream_pattern loc epo e ekont spcl
       in
@@ -171,13 +169,11 @@ value stream_patterns_term loc ekont tspel =
       (fun (p, w, loc, spcl, epo, e) ->
          let p = <:patt< Some $p$ >> in
          let e =
-           let ekont err =
-             let str =
-               match err with
-               [ Some estr -> estr
-               | _ -> <:expr< "" >> ]
-             in
-             <:expr< raise (Stream.Error $str$) >>
+           let ekont =
+             fun
+             [ Some (Some estr) -> <:expr< raise (Stream.Error $estr$) >>
+             | Some None -> <:expr< raise Stream.Failure >>
+             | None -> <:expr< raise (Stream.Error "") >> ]
            in
            let skont = stream_pattern loc epo e ekont spcl in
            <:expr< do { $junk_fun loc$ $lid:strm_n$; $skont$ } >>
@@ -305,8 +301,12 @@ EXTEND
      | p = patt -> SpStr loc p ] ]
   ;
   stream_patt_comp_err:
-    [ [ spc = stream_patt_comp;
-        eo = OPT [ "??"; e = expr LEVEL "expr1" -> e ] -> (spc, eo) ] ]
+    [ [ spc = stream_patt_comp; "??"; e = expr LEVEL "expr1" ->
+          (spc, Some (Some e))
+      | spc = stream_patt_comp; "?!" ->
+          (spc, Some None)
+      | spc = stream_patt_comp ->
+          (spc, None) ] ]
   ;
   ipatt:
     [ [ i = LIDENT -> <:patt< $lid:i$ >>
