@@ -88,14 +88,19 @@ value parser_cases b spel dg k =
     match sp with
     [ [] -> [: `HVbox [: b; k :] :]
     | [(spc, None)] -> [: `stream_patt_comp b spc "" k :]
-    | [(spc, Some e)] ->
+    | [(spc, Some None)] ->
+        [: `stream_patt_comp b spc "" [: `S LR "?!"; k :] :]
+    | [(spc, Some (Some e))] ->
         [: `HVbox
               [: `stream_patt_comp b spc "" [: :];
                  `HVbox [: `S LR "??"; `expr e "" k :] :] :]
     | [(spc, None) :: spcl] ->
         [: `stream_patt_comp b spc ";" [: `S RO ";" :];
            stream_patt [: :] spcl k :]
-    | [(spc, Some e) :: spcl] ->
+    | [(spc, Some None) :: spcl] ->
+        [: `stream_patt_comp b spc ";" [: `S LR "?!"; `S RO ";" :];
+           stream_patt [: :] spcl k :]
+    | [(spc, Some (Some e)) :: spcl] ->
         [: `HVbox
               [: `stream_patt_comp b spc "" [: :];
                  `HVbox [: `S LR "??"; `expr e ";" [: `S RO ";" :] :] :];
